<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ui"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:src="@drawable/instagram"
        android:tint="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/edt_fullname_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_background"
        android:padding="10dp"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="6dp"
        android:inputType="textEmailAddress"
        android:hint="@string/fullname"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_username_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_background"
        android:padding="10dp"
        android:layout_below="@+id/edt_fullname_register"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="6dp"
        android:inputType="textEmailAddress"
        android:hint="@string/username"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_background"
        android:padding="10dp"
        android:layout_below="@+id/edt_username_register"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="6dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edt_password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_background"
        android:padding="10dp"
        android:layout_below="@+id/edt_email_register"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="6dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password_register"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/button_bg"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn_signin_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorAccent"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>

</RelativeLayout>