<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar_layout_profile"
        android:background="@android:color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@android:color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/profile_fragment_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="18sp"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_centerVertical="true"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/options_view"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/options"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/todo" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar_layout_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/top_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="3dp"
                android:padding="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image_gbr_frag"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/profile"/>

                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="90dp"
                    android:gravity="center"

                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginStart="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_totalPost"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/black"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/posts"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/black"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginStart="7dp"
                            android:orientation="vertical">


                            <TextView
                                android:id="@+id/txt_totalFollowers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/black"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/followers"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/black"/>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginStart="7dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txt_totalFollowing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/black"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@android:color/black"/>

                        </LinearLayout>

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_edit_account"
                        android:layout_width="170dp"
                        android:layout_height="32dp"
                        android:text="@string/edit_profile"
                        android:textAllCaps="false"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/buttons_background"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mid_bar"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_full_namaProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/txt_bio_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bio"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/button_black_background"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <ImageButton
                    android:id="@+id/image_grid_view_button"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/grid"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:contentDescription="@string/todo" />

                <ImageButton
                    android:id="@+id/image_save_button"
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/save_large_icon"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_upload_picimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </androidx.recyclerview.widget.RecyclerView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_save_picimage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">
            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>